--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
@@ -19,11 +20,11 @@
 			Cơ Bida Longoni Ch&#237;nh H&#227;ng tại Tp HCM
 		</title>
 <meta name="description" content="Cơ Bida Longoni Chính Hãng  Đảm bảo uy tín chất lượng nhập chính hãng và phân phối độc quyền" />
-		<link rel="canonical" href="https://cobida.com/" />
+		<link rel="canonical" href="https://longoni.myharavan.com/" />
 	
 		<meta name="robots" content="index,follow,noodp"> 
 		<meta http-equiv="x-dns-prefetch-control" content="on">
-		<link rel="dns-prefetch" href="https://cobida.com">
+		<link rel="dns-prefetch" href="https://longoni.myharavan.com">
 		<link rel="dns-prefetch" href="//hstatic.net">
 		<link rel="dns-prefetch" href="//theme.hstatic.net/">
 		<link rel="dns-prefetch" href="//file.hstatic.net/">
@@ -70,7 +71,7 @@ var template = "index";
 <meta property="og:image" content="http://theme.hstatic.net/1000405600/1000541487/14/share_fb_home.png?v=2" />
 <meta property="og:image:secure_url" content="https://theme.hstatic.net/1000405600/1000541487/14/share_fb_home.png?v=2" />
 <meta property="og:description" content="Cơ Bida Longoni Chính Hãng  Đảm bảo uy tín chất lượng nhập chính hãng và phân phối độc quyền" />
-<meta property="og:url" content="https://cobida.com/" />
+<meta property="og:url" content="https://longoni.myharavan.com/" />
 <meta property="og:site_name" content="Cơ Bida Longoni" />
 
 
@@ -82,7 +83,7 @@ var template = "index";
 <!-- END SEO META DESCRIPTION -->
 <!-- SEO PAGI -->
 <!-- END SEO PAGI -->
-		<script type="application/ld+json">{"@context":"http://schema.org","@type":"WebSite","name":"longoni.myharavan.com","url":"https://cobida.com","potentialAction":{"@type":"SearchAction","target":"https://cobida.com/search?&q={search_term_string}","query-input":"required name=search_term_string"}}</script>
+		<script type="application/ld+json">{"@context":"http://schema.org","@type":"WebSite","name":"longoni.myharavan.com","url":"https://longoni.myharavan.com","potentialAction":{"@type":"SearchAction","target":"https://longoni.myharavan.com/search?&q={search_term_string}","query-input":"required name=search_term_string"}}</script>
 		<script type='text/javascript'>
 //<![CDATA[
 if ((typeof Haravan) === 'undefined') {
@@ -94,7 +95,7 @@ Haravan.theme = {"name":"runner_inn_a6cfc72bc78d4949af9a15587137e94b","id":10005
 Haravan.domain = 'longoni.myharavan.com';
 //]]>
 </script>
-<script type='text/javascript'>!function(){var hrv_analytics=window.hrv_analytics=window.hrv_analytics||[];if(!hrv_analytics.initialize)if(hrv_analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{hrv_analytics.invoked=!0;hrv_analytics.methods=["start","trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];hrv_analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);hrv_analytics.push(e);return hrv_analytics}};for(var t=0;t<hrv_analytics.methods.length;t++){var e=hrv_analytics.methods[t];hrv_analytics[e]=hrv_analytics.factory(e)}hrv_analytics.load=function(t,e){var n=document.createElement("script");n.type="text/javascript";n.async=!0;n.src="https://stats.hstatic.net/analytics.min.js?t=2";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(n,a);hrv_analytics._loadOptions=e};hrv_analytics.SNIPPET_VERSION="4.1.0";hrv_analytics.start('pro:web:1000405600');hrv_analytics.page();hrv_analytics.load();}}();</script><style>.grecaptcha-badge{visibility:hidden;}</style>
+<iframe id="admin_bar_iframe" src="https://longoni.myharavan.com/admin/bar?u=https://longoni.myharavan.com/" style="height: 40px; position:fixed; top:0; left:0; right:0; z-index:2147483647;background:#191919" width="100%" frameborder="0" allowTransparency="true">{}</iframe><script>function getStyle(e,t){var o=e;if(o.currentStyle)var n=o.currentStyle[t];else if(window.getComputedStyle)var n=document.defaultView.getComputedStyle(o,null).getPropertyValue(t);return n}function doShift(e){for(var t=document.getElementsByTagName("*"),o=0;o<t.length;o++)"admin_bar_iframe"!=t[o].id&&"fixed"==getStyle(t[o],"position")&&(t[o].style.top=parseInt(getStyle(t[o],"top"),10)+(e?40:-40)+"px")}function setABVCookie(e){var t=new Date;t.setDate(t.getDate()+720),document.cookie="_abv="+e+";expires="+t.toUTCString()+";path=/"}function receiveABMessage(e){ if(0==e.origin.indexOf("https://longoni.myharavan.com"))if("1"==e.data){document.body.style.position="relative",document.documentElement.style.paddingTop="40px",doShift(!0);var t=document.getElementById("admin_bar_iframe");t.style.width="100%",t.style.backgroundColor="#191919",t.style.right="auto",t.style.left=0,setABVCookie("1")}else if("0"==e.data){document.body.style.position="relative",document.documentElement.style.paddingTop="0px",doShift(!1);var t=document.getElementById("admin_bar_iframe");t.style.backgroundColor="transparent",t.style.right="0px",t.style.left="auto",t.style.width="40px",setABVCookie("0")}}window.onload=function(){doShift(!0)},window.addEventListener?addEventListener("message",receiveABMessage,!1):window.attachEvent("onmessage",receiveABMessage);</script> <style type ="text/css">html {  padding-top:40px; } body { position:relative;} </style><script type='text/javascript'>!function(){var hrv_analytics=window.hrv_analytics=window.hrv_analytics||[];if(!hrv_analytics.initialize)if(hrv_analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{hrv_analytics.invoked=!0;hrv_analytics.methods=["start","trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];hrv_analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);hrv_analytics.push(e);return hrv_analytics}};for(var t=0;t<hrv_analytics.methods.length;t++){var e=hrv_analytics.methods[t];hrv_analytics[e]=hrv_analytics.factory(e)}hrv_analytics.load=function(t,e){var n=document.createElement("script");n.type="text/javascript";n.async=!0;n.src="https://stats.hstatic.net/analytics.min.js?t=2";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(n,a);hrv_analytics._loadOptions=e};hrv_analytics.SNIPPET_VERSION="4.1.0";hrv_analytics.start('pro:web:1000405600');hrv_analytics.page();hrv_analytics.load();}}();</script><style>.grecaptcha-badge{visibility:hidden;}</style>
 <script type='text/javascript'>
 window.HaravanAnalytics = window.HaravanAnalytics || {};
 window.HaravanAnalytics.meta = window.HaravanAnalytics.meta || {};
@@ -119,7 +120,7 @@ window.HaravanAnalytics.AutoTrack = true;
 				<div class="main-header--logo fade-box" itemscope="" itemtype="http://schema.org/Organization">
 					
 					
-					<a href="https://cobida.com" itemprop="url">
+					<a href="https://longoni.myharavan.com" itemprop="url">
 						<h1 class="logo">
 							<img itemprop="logo" src="//theme.hstatic.net/1000405600/1000541487/14/logo.png?v=2" alt="Cơ Bida Longoni" class="img-responsive logoimg lazyload"/>
 						</h1>
@@ -936,7 +937,7 @@ window.HaravanAnalytics.AutoTrack = true;
 	<div class="main-footer--copyright">
 		<div class="container">
 			<div class="main-footer--border">
-				<p>Copyright © 2021 <a href="https://cobida.com"> Cơ Bida Longoni</a>.</p>
+				<p>Copyright © 2021 <a href="https://longoni.myharavan.com"> Cơ Bida Longoni</a>.</p>
 			</div>
 		</div>
 	</div>
